Bug 1957020 - [devtools] Fix matching bracket style in High Contrast Mode. r=devtools-reviewers,ochameau.
Don't use important on the background color unset in regular mode so the declaration for HCM overrides it.
Instead, increase the specificity of the rule so it's higher than the default CodeMirror one.

Differential Revision: https://phabricator.services.mozilla.com/D243428

--- a/devtools/client/shared/sourceeditor/codemirror/mozilla.css
+++ b/devtools/client/shared/sourceeditor/codemirror/mozilla.css
@@ -510,15 +510,16 @@
   vertical-align: middle;
 }
 
-.cm-editor .cm-matchingBracket {
+/* Repeat .cm-matchingBracket to get a higher specificity than the default codemirror rule */
+.cm-editor .cm-matchingBracket.cm-matchingBracket {
   /* Removing the default background color */
-  background-color: unset !important;
+  background-color: unset;
   /* Applying the same color that was set in cm5. Set the color on the parent so the
      underline set on the parent has the correct color */
   color: #0b0;
 
   :root[forced-colors-active] & {
-    background: Mark;
+    background-color: Mark;
     color: MarkText;
   }
 
